src/styles/home.scss
$dark-grey: #22292f;
$secondary-grey: #8795a1;
$grey: #3d4852;

$breakpoint-tablet: 900px;
$breakpoint-mobile: 680px;

// ! have two active classes at the moment

body {
  background: #ffffff;
  color: $grey;
}

.chunky-link {
  display: inline;
  background-image: linear-gradient(
    0deg,
    hsl(208.6, 14.7, 70),
    hsl(207.7, 12.1, 90)
  );
  background-repeat: no-repeat;
  background-size: 100% 25%;
  background-position: 0 95%;
}

.active {
  color: $dark-grey;
}

.contact-button {
  border: 1px solid $dark-grey;
  padding: 25px;
  background: $dark-grey;
  border-radius: 10px;
  text-align: center;
  color: #fff;
  font-weight: 700;
  letter-spacing: 1.5px;
  margin: 150px auto 50px auto;
  display: block;
  width: 150px;
  box-shadow: 0 3px 5px hsla(0, 0%, 0%, 0.1);

  &:hover {
    border: 1px solid $dark-grey;
    color: $dark-grey;
    background: #fff;
  }
}

// HEADER

header {
  margin: 70px auto 0 auto;
  max-width: 1000px;
  display: flex;
  align-items: center;

  @media (max-width: $breakpoint-mobile) {
    // max-width: 700px;
    margin: 35px 0 15px 0;
    display: block;
    line-height: 0.3;
  }

  img {
    border-radius: 50%;
    display: inline-block;
    @media (max-width: $breakpoint-tablet) {
      width: 125px;
      height: 125px;
    }
    @media (max-width: $breakpoint-mobile) {
      width: 75px;
      height: 75px;
    }
  }
  nav {
    max-width: 800px;
    width: 600px;
    padding-left: 70px;
    display: inline-block;
    @media (max-width: $breakpoint-tablet) {
      padding-left: 25px;
    }
    @media (max-width: $breakpoint-mobile) {
      display: flex;
      justify-content: space-between;
      align-items: center;
      padding-left: 0;
      max-width: 325px;
      flex-flow: wrap;
    }

    h1 {
      font-size: 2.5rem;
      @media (max-width: $breakpoint-tablet) {
        font-size: 2rem;
      }
      @media (max-width: $breakpoint-mobile) {
        font-size: 1.5rem;
        display: inline-block;
      }
      a {
        color: $dark-grey;
        text-decoration: none;
        font-weight: 800;
      }
    }
    ul {
      display: flex;
      justify-content: space-between;
      color: $secondary-grey;
      padding-left: 0;

      @media (max-width: $breakpoint-mobile) {
        display: none;
        width: 300px;
        line-height: 1.4;
        text-align: center;
      }

      a {
        letter-spacing: 1.3px;
        font-size: 0.9rem;
        font-weight: 500;
        &:hover {
          color: $dark-grey;
        }
      }
    }
  }
}

.menu-mobile {
  display: none;
  width: 35px;
  height: 35px;
  color: $dark-grey;
  @media (max-width: $breakpoint-mobile) {
    display: inline-block;
  }

  &:hover {
    cursor: pointer;
  }
}

.active {
  display: block;
}

// ABOUT

.section-title {
  font-size: 1.7rem;
  color: $dark-grey;
  margin-bottom: 30px;
}

.about-wrapper {
  margin: 100px auto 100px auto;
  max-width: 600px;

  @media (max-width: $breakpoint-mobile) {
    margin-top: 50px;

    .section-title {
      font-size: 1.5rem;
    }
  }

  // .about-info {
  //   margin-bottom: 30px;
  // }

  p {
    line-height: 1.5;
    // margin-top: 30px;
    color: $grey;
    font-size: 1.2rem;
    margin-bottom: 20px;

    a {
      color: $dark-grey;
      font-weight: 700;
    }
  }
}

// TOOLBOX

.tool-wrapper {
  margin: 100px auto 100px auto;
  max-width: 600px;

  @media (max-width: $breakpoint-mobile) {
    margin-top: 50px;

    .section-title {
      font-size: 1.5rem;
    }
  }

  ul {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    // margin-top: 30px;
    max-width: 550px;
    margin-bottom: 85px;
    padding: 0;

    li {
      background-color: #fafafa;
      box-shadow: 0 1px 3px hsla(0, 0%, 0%, 0.2);
      padding: 10px 15px;
      font-size: 1.2rem;
      margin-top: 10px;
      border-radius: 2px;
    }
  }
}

// PORTFOLIO

.portfolio-wrapper {
  margin: 100px auto 0 auto;
  max-width: 600px;

  @media (max-width: $breakpoint-mobile) {
    margin-top: 50px;

    .section-title {
      font-size: 1.7rem;
    }
  }
}

.project-flex {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 70px;

  @media (max-width: 785px) {
    height: 700px;
    flex-direction: column;
    align-content: space-between;
  }

  div {
    max-width: 400px;
  }

  h3 {
    padding-top: 20px;
    font-size: 1.3rem;
    letter-spacing: 0.9px;
  }

  hr {
    width: 50px;
    margin: 3px 0 0 0;
    height: 2px;
    background-color: $grey;
    border: 1px solid $grey;
    border-radius: 2px;
  }

  p {
    margin: 25px 0;
    line-height: 1.7;
    max-width: 325px;
  }

  a {
    border: 1px solid $dark-grey;
    color: $dark-grey;
    background-color: #fff;
    letter-spacing: 1.5px;
    border-radius: 3px;
    padding: 15px 25px;
    font-weight: bold;

    &:nth-of-type(even) {
      margin-left: 40px;
    }

    &:hover {
      color: #fff;
      background-color: $dark-grey;
    }
  }
}

.button-wrap {
  margin: 125px auto 100px auto;
}

.projects {
  max-width: 800px;
  margin: 0 auto;
}

.project-info {
  margin-bottom: 50px;
}

// CONTACT

.contact-wrapper {
  margin: 100px auto 100px auto;
  max-width: 600px;

  @media (max-width: $breakpoint-mobile) {
    margin-top: 50px;

    .section-title {
      font-size: 1.5rem;
    }
  }

  ul {
    max-width: 400px;
  }

  span {
    font-size: 1.4rem;
    color: $dark-grey;
    font-weight: bold;
    letter-spacing: 1.5px;
  }

  li {
    font-size: 1.2rem;
    margin-top: 10px;
    display: inline-block;

    &:hover {
      transform: scale(1.2);
    }
  }
}

